# robo-magazyn

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp  output.txt  setup.sh  simulate.cpp  simulate.h  test_script.sh
charts/: chart.py
data/: generate_data.py
data/in/: base-case.json  test-case-2-p10-c25.json  test-case-2-p16-c16.json  test-case-2-p25-c10.json  test-case-2.json  test-case-c1.json  test-case-c20.json  test-case-c5.json  test-case-p1.json  test-case-p10.json  test-case-p20.json  test-case-p5.json  test-case.json
simulation/: index.html  index.js  result.json  result_new.json  styles.css
src/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  main.cpp  simulate.cpp  simulate.h
